--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -29,7 +29,7 @@
         </Style>
     </Window.Resources>
     <Grid x:Name="grid">
-        <DockPanel x:Name="dockPanel" HorizontalAlignment="Left" Height="880" LastChildFill="False" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" Margin="0,0,0,-61">
+        <DockPanel x:Name="dockPanel" HorizontalAlignment="Left" Height="{Binding ActualHeight, ElementName=grid, Mode=OneWay}" LastChildFill="False" VerticalAlignment="Top" Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}" Margin="0,0,0,-61">
             <DockPanel.Background>
                 <SolidColorBrush Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}"/>
             </DockPanel.Background>
@@ -123,7 +123,7 @@
                                   CanUserAddRows="False"
                                   ItemsSource="{Binding}"                                  
                                   Margin="0,0,0,0" AutoGenerateColumns="False">
-                            
+
                             <DataGrid.Columns>
                                 <DataGridTextColumn Header="序号" Width="80" Binding="{Binding Code}"></DataGridTextColumn>
                                 <DataGridTextColumn Header="样品名" Width="80" Binding="{Binding NewName}"></DataGridTextColumn>
@@ -201,15 +201,15 @@
                     </StackPanel>
                 </TabItem>
             </TabControl>
-            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="50">
-                <Button x:Name="modifyBtn" Height="20" Content="保存" Margin="20,1,0,0" Click="modifyBtn_Click" />
-                <Button x:Name="exportexelBtn" Height="20" Content="输出excel" Margin="20,1,0,0" Click="exportexelBtn_Click" />
-                <Button x:Name="startTestBtn" Height="20" Content="开始测试" Margin="20,1,0,0" Click="startTestBtn_Click" />
-                <Button x:Name="AddRowBtn" Height="20" Padding="1" Margin="700,1,1,0" RenderTransformOrigin="0.643,-0.85" Content="增加" Click="AddRowBtn_Click" />
-                <Button x:Name="DelRowBtn" Height="20" Content="删除" Margin="20,1,0,0" Click="DelRowBtn_Click" />
-            </StackPanel>
+            <DockPanel DockPanel.Dock="Top" Height="50">
+                <Button x:Name="modifyBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="保存" Margin="20,1,0,0" Click="modifyBtn_Click"  />
+                <Button x:Name="exportexelBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="输出excel" Margin="20,1,0,0" Click="exportexelBtn_Click" />
+                <Button x:Name="startTestBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="开始测试" Margin="20,1,0,0" Click="startTestBtn_Click" />
+                <Button x:Name="AddRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Height="20" Padding="1" Margin="0,1,20,0"  Content="增加" Click="AddRowBtn_Click" />
+                <Button x:Name="DelRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Height="20" Content="删除" Margin="0,1,20,0" Click="DelRowBtn_Click" />
+            </DockPanel>
             <StackPanel  DockPanel.Dock="Top" Height="50" Orientation="Vertical">
-                <Border x:Name="AnimatedColorButton" Width="48" Height="48" BorderThickness="2" BorderBrush="Red" CornerRadius="2" Visibility="Hidden">
+                <Border x:Name="AnimatedColorButton" Width="48" Height="48" BorderThickness="2" BorderBrush="Red" CornerRadius="50" Visibility="Hidden">
                     <Border.Triggers>
                         <EventTrigger RoutedEvent="Border.Loaded">
                             <BeginStoryboard>
@@ -224,7 +224,26 @@
                             </BeginStoryboard>
                         </EventTrigger>
                     </Border.Triggers>
+                    <!--
                     <Button x:Name="statusBtn" Visibility="Hidden">测试中</Button>
+                    -->
+                    
+                    <Button x:Name="statusBtn" Visibility="Hidden" Cursor="Hand" Opacity="1" Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="2" Foreground="#FF7C7C03">
+                        <Button.Template>
+                            <ControlTemplate TargetType="{x:Type Button}">
+                                <Border BorderBrush="{TemplateBinding Control.BorderBrush}" BorderThickness="0" CornerRadius="33,33,33,33" Name="PART_Background">
+                                    <Border.Background>
+                                        <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                                            <GradientStop Color="White" Offset="0.0" />
+                                            <GradientStop Color="Silver" Offset="0.5" />
+                                            <GradientStop Color="White" Offset="0.0" />
+                                        </LinearGradientBrush>
+                                    </Border.Background>
+                                    <ContentPresenter Content="{TemplateBinding ContentControl.Content}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
                 </Border>
             </StackPanel>
 
@@ -245,10 +264,11 @@
 
             </GroupBox>
 
-            <DockPanel DockPanel.Dock="Top" Height="82" LastChildFill="False" Width="{Binding ElementName=dockPanel, Mode=OneWay}">
-                <Button Content="退出" Height="52" DockPanel.Dock="Right" Width="75" Margin="0,5,40,25" Click="Button_Click"/>
+            <DockPanel DockPanel.Dock="Top" Height="90" LastChildFill="False" Width="{Binding ElementName=dockPanel, Mode=OneWay}">
+                <Button Content="退出" DockPanel.Dock="Right" Width="75" Margin="0,10,40,25" Click="Button_Click" RenderTransformOrigin="1,0"/>
             </DockPanel>
-            <StatusBar Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" Height="35" DockPanel.Dock="Bottom">
+            <StatusBar Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" Height="35" 
+                       DockPanel.Dock="Bottom">
                 <StatusBarItem>
                     <TextBlock Text="状态"></TextBlock>
                 </StatusBarItem>
