--- a/SilverTest/SerialPortLab/MainWindow.xaml
+++ b/SilverTest/SerialPortLab/MainWindow.xaml
@@ -9,12 +9,19 @@
         Title="RS232调试程序" Height="450" Width="800" Loaded="Window_Loaded">
     <Grid Loaded="Grid_Loaded">
         <StackPanel HorizontalAlignment="Left" Height="419" VerticalAlignment="Top" Width="792">
+            <StackPanel Height="20" Orientation="Horizontal">
+                <TextBlock Margin="20,0,0,0" >端口</TextBlock>
+                <TextBlock Margin="130,0,0,0">速率</TextBlock>
+                <TextBlock Margin="130,0,0,0">校验</TextBlock>
+                <TextBlock Margin="130,0,0,0">数据位</TextBlock>
+                <TextBlock Margin="130,0,0,0">停止位</TextBlock>
+            </StackPanel>
             <DockPanel Height="100" LastChildFill="False">
-                <ComboBox x:Name="comporCombo" Height="42" VerticalAlignment="Center" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"/>
-                <ComboBox x:Name="rate" Height="42" VerticalAlignment="Center" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
-                <ComboBox x:Name="cbbParity" Height="42" VerticalAlignment="Center" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
-                <ComboBox x:Name="cbbDataBits" Height="42" VerticalAlignment="Center" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
-                <ComboBox x:Name="cbbStopBits" Height="42" VerticalAlignment="Center" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
+                <ComboBox Text="端口" x:Name="comporCombo" Height="42" VerticalAlignment="Top" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"/>
+                <ComboBox Text="速率" x:Name="rate" Height="42" VerticalAlignment="Top" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
+                <ComboBox x:Name="cbbParity" Height="42" VerticalAlignment="Top" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
+                <ComboBox x:Name="cbbDataBits" Height="42" VerticalAlignment="Top" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
+                <ComboBox x:Name="cbbStopBits" Height="42" VerticalAlignment="Top" Width="128" SelectionChanged="ComboBox_SelectionChanged" Margin="20,0,0,0"></ComboBox>
             </DockPanel>
             <DockPanel HorizontalAlignment="Left" Height="155" LastChildFill="False" VerticalAlignment="Top" Width="792" Margin="0,0,0,0">
                 <TextBox x:Name="outputData" Height="155" TextWrapping="Wrap" Text="输出数据:" VerticalAlignment="Top" Width="793" BorderThickness="4" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True"/>
