--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -206,6 +206,7 @@
                 <Button x:Name="exportexelBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="输出excel" Margin="20,1,0,0" Click="exportexelBtn_Click" />
                 <Button x:Name="startTestBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Height="20" Content="开始测试" Margin="20,1,0,0" Click="startTestBtn_Click" />
                 <Button x:Name="testBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Content="开发" Margin="20,1,0,0" Height="20" Width="75" Click="testBtn_Click"/>
+                <Button x:Name="debugBtn" HorizontalAlignment="Left" DockPanel.Dock="Left" Content="停止发送" Margin="20,1,0,0" Height="20" Width="75" Click="debugBtn_Click"/>
                 <Button x:Name="AddRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Height="20" Padding="1" Margin="0,1,20,0"  Content="增加" Click="AddRowBtn_Click" />
                 <Button x:Name="DelRowBtn" DockPanel.Dock="Right"  HorizontalAlignment="Right" Height="20" Content="删除" Margin="0,1,20,0" Click="DelRowBtn_Click" />
                 
